--- a/src/hall/collin/christopher/cpf/fxml/WorldMapScreen.fxml
+++ b/src/hall/collin/christopher/cpf/fxml/WorldMapScreen.fxml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" minHeight="-1.0" minWidth="-1.0" prefHeight="700.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml" fx:controller="hall.collin.christopher.cpf.WorldMapScreenController">
+<AnchorPane id="AnchorPane" minHeight="-1.0" minWidth="-1.0" prefHeight="700.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="hall.collin.christopher.cpf.WorldMapScreenController">
   <children>
     <VBox prefHeight="200.0" prefWidth="-1.0" spacing="8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
         <HBox prefHeight="100.0" prefWidth="200.0">
           <children>
-            <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="256.0" prefWidth="256.0" style="-fx-background-color: #000000;" HBox.hgrow="NEVER">
-              <children>
-                <ImageView fx:id="globeSpinner" fitHeight="256.0" fitWidth="256.0" pickOnBounds="true" preserveRatio="true" style="" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-              </children>
-            </AnchorPane>
+            <AnchorPane fx:id="globeViewPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="256.0" prefWidth="256.0" style="-fx-background-color: #000000;" HBox.hgrow="NEVER" />
 			<ScrollPane prefHeight="256.0" prefWidth="256.0" HBox.hgrow="ALWAYS">
-				<VBox id="planetPropertiesPane" fx:id="planetPropertiesPane" prefHeight="-1" prefWidth="-1" spacing="4.0" >
+				<VBox id="planetPropertiesPane" fx:id="planetPropertiesPane" prefHeight="-1" prefWidth="-1" spacing="4.0">
 					<children>
 						<Label fx:id="planetName" style="-fx-font-weight: bold; -fx-font-size: 125%;" text="..." />
 						<Label fx:id="planetStat_Tscore" text="..." />
@@ -44,7 +44,7 @@
             <ImageView fx:id="mapView" fitHeight="256.0" fitWidth="512.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER" />
             <Separator orientation="VERTICAL" prefHeight="200.0" />
             <ScrollPane prefHeight="-1" prefWidth="256.0" HBox.hgrow="ALWAYS">
-				<VBox id="legendPane" fx:id="legendPane" prefHeight="200.0" prefWidth="256.0" style="-fx-background-color: black;" spacing="4.0" >
+				<VBox id="legendPane" fx:id="legendPane" prefHeight="200.0" prefWidth="256.0" spacing="4.0" style="-fx-background-color: black;">
 				<padding>
 				  <Insets bottom="8.0" left="16.0" right="16.0" top="8.0" />
 				</padding>
@@ -54,7 +54,7 @@
         </HBox>
         <Separator prefWidth="200.0" />
 		<Label style="-fx-font-weight: bold; -fx-font-size: 125%;" text="Map Options" />
-		<FlowPane id="mapOptionsPane" fx:id="mapOptionsPane" prefHeight="200.0" prefWidth="256.0" hgap="4.0" vgap="4.0" >
+		<FlowPane id="mapOptionsPane" fx:id="mapOptionsPane" hgap="4.0" prefHeight="200.0" prefWidth="256.0" vgap="4.0">
 			<children>
 				<CheckBox fx:id="biomeCheckbox" mnemonicParsing="false" text="Show biomes" />
 				<CheckBox fx:id="sectorCheckbox" disable="true" mnemonicParsing="false" text="Show sector labels" />
